--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,7 +6,7 @@
       "name": "temp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMMC9y+u7rG6cktU8Ugsvbn",
+      "authorship_tag": "ABX9TyMfJjjkD9xHJa4bsZjTD8tp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,11 +84,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "WfZZIfrzGbUO",
-        "outputId": "209923a7-3b34-4594-ce23-7041e6fbce1d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 82
-        }
+        },
+        "outputId": "209923a7-3b34-4594-ce23-7041e6fbce1d"
       },
       "source": [
         "from sympy import *\r\n",
@@ -104,7 +104,7 @@
         "# display(Math('f(x) =' + sy.latex(expression)))\r\n",
         "# display(Math('\\\\left[ \\\\frac{3 \\\\mu_2^2+\\\\sigma_2^2\\\\log(2)}{2\\\\mu_2} \\\\right]'))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1131,6 +1131,190 @@
       },
       "source": [
         "const range = (start, stop) => Array.from({ length: (stop - start) + 1}, (_, i) => start + i);"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sJ-HmyFiOM_j"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YkT6YJmmOMOR"
+      },
+      "source": [
+        "<!DOCTYPE html>\r\n",
+        "<html lang=\"ja\">\r\n",
+        "  <head>\r\n",
+        "    <title>サンプル</title>\r\n",
+        "    <meta charset=\"utf-8\">\r\n",
+        "    <script src=\"http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js\"></script>\r\n",
+        "\r\n",
+        "    <style>\r\n",
+        "    div#paging\r\n",
+        "    {\r\n",
+        "      text-align: center;\r\n",
+        "      /* スクロールに対してページングボックスの位置を固定 */\r\n",
+        "      position: fixed;\r\n",
+        "      /* 位置を指定 */\r\n",
+        "      bottom: 0;\r\n",
+        "      right:45%;\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    div#pagingbox{\r\n",
+        "      background: #FFF;\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    th{\r\n",
+        "      /* ヘッダ背景塗りつぶし */\r\n",
+        "      background: #eee;\r\n",
+        "    }\r\n",
+        "   th,td {\r\n",
+        "     /* 枠線を1本線指定 */\r\n",
+        "      border: solid 1px;\r\n",
+        "      width:auto;\r\n",
+        "   }\r\n",
+        "\r\n",
+        "   table{\r\n",
+        "     /* 枠線を1本線指定 */\r\n",
+        "      border: solid 1px;\r\n",
+        "      border-collapse:  collapse;\r\n",
+        "      white-space: nowrap;\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    footer{\r\n",
+        "      position: fixed;\r\n",
+        "      width: 100%;\r\n",
+        "      background-color: #C0C0C0;\r\n",
+        "      padding: 15px 0;\r\n",
+        "      bottom: 0; /*下に固定*/\r\n",
+        "    }\r\n",
+        "    </style>\r\n",
+        "\r\n",
+        "  </head>\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "  <body>\r\n",
+        "    <!--テーブル生成位置-->\r\n",
+        "    <div id ='maintable'></div>\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "    <!--ページングボタン配置-->\r\n",
+        "    <footer>\r\n",
+        "      <div id=\"paging\">\r\n",
+        "        <table>\r\n",
+        "          <tr>\r\n",
+        "            <tb><button id=\"prevbtn\" type=\"button\"><</button></tb>\r\n",
+        "              <tb>\r\n",
+        "                <span id=\"currentpage\">currentpage</span>\r\n",
+        "                  /\r\n",
+        "                <span id=\"lastpage\">lastpage</span>\r\n",
+        "              </tb>\r\n",
+        "            <tb><button id=\"nextbtn\" type=\"button\">></button></tb>\r\n",
+        "          </tr>\r\n",
+        "        </table>\r\n",
+        "      </div>\r\n",
+        "    </footer>\r\n",
+        "\r\n",
+        "\r\n",
+        "    <script>\r\n",
+        "    var json =[     //jsonサンプルデータ\r\n",
+        "      {\r\n",
+        "        \"順位\":1 ,\"氏名\":\"王貞治\" , \"本数\":868\r\n",
+        "      }\r\n",
+        "      ,\r\n",
+        "      {\r\n",
+        "        \"順位\":2 ,\"氏名\":\"野村克也\" ,\"本数\":657\r\n",
+        "      }\r\n",
+        "      ,\r\n",
+        "      {\r\n",
+        "        \"順位\":3 ,\"氏名\":\"門田博光\" ,\"本数\":567\r\n",
+        "      }\r\n",
+        "      ,\r\n",
+        "      {\r\n",
+        "        \"順位\":4 ,\"氏名\":\"山本浩二\" ,\"本数\":536\r\n",
+        "      }\r\n",
+        "      ,\r\n",
+        "      {\r\n",
+        "        \"順位\":5 ,\"氏名\":\"清原和博\" ,\"本数\":525\r\n",
+        "      }\r\n",
+        "    ]\r\n",
+        "\r\n",
+        "      // table要素を生成\r\n",
+        "      var table = document.createElement('table');\r\n",
+        "\r\n",
+        "      // ヘッダーを作成\r\n",
+        "      var tr = document.createElement('tr');\r\n",
+        "      for (key in json[0]) {\r\n",
+        "            // th要素を生成\r\n",
+        "            var th = document.createElement('th');\r\n",
+        "            // th要素内にテキストを追加\r\n",
+        "            th.textContent = key;\r\n",
+        "            // th要素をtr要素の子要素に追加\r\n",
+        "            tr.appendChild(th);\r\n",
+        "            }\r\n",
+        "        // tr要素をtable要素の子要素に追加\r\n",
+        "        table.appendChild(tr);\r\n",
+        "\r\n",
+        "      // テーブル本体を作成\r\n",
+        "      for (var i = 0; i < json.length; i++) {\r\n",
+        "        // tr要素を生成\r\n",
+        "        var tr = document.createElement('tr');\r\n",
+        "        // th・td部分のループ\r\n",
+        "        for (key in json[0]) {\r\n",
+        "              // td要素を生成\r\n",
+        "              var td = document.createElement('td');\r\n",
+        "              // td要素内にテキストを追加\r\n",
+        "              td.textContent = json[i][key];\r\n",
+        "              // td要素をtr要素の子要素に追加\r\n",
+        "              tr.appendChild(td);\r\n",
+        "            }\r\n",
+        "        // tr要素をtable要素の子要素に追加\r\n",
+        "        table.appendChild(tr);\r\n",
+        "        }\r\n",
+        "      // 生成したtable要素を追加する\r\n",
+        "      document.getElementById('maintable').appendChild(table);\r\n",
+        "    </script>\r\n",
+        "\r\n",
+        "\r\n",
+        "    <script>// ページング機能\r\n",
+        "    jQuery(function($) {\r\n",
+        "      var page = 0;\r\n",
+        "      var displayrows = 30;// １ページ当たり表示する行の数\r\n",
+        "\r\n",
+        "      function draw() {// ページの表示\r\n",
+        "        $('#lastpage').html(Math.ceil(($('tr').size()-1)/displayrows));\r\n",
+        "        $('#currentpage').html(page + 1);\r\n",
+        "        $('tr').hide();\r\n",
+        "        $('tr:first,tr:gt(' + page * displayrows + '):lt(' + displayrows + ')').show();// 変数を使用する場合は' +  + 'を忘れずに\r\n",
+        "      }\r\n",
+        "      $('#prevbtn').click(function() {// １ページ後進\r\n",
+        "        if (page > 0) {\r\n",
+        "          page--;\r\n",
+        "          draw();\r\n",
+        "        }\r\n",
+        "      });\r\n",
+        "      $('#nextbtn').click(function() {// １ページ前進\r\n",
+        "        if (page < ($('tr').size() - 1) /displayrows - 1) {\r\n",
+        "          page++;\r\n",
+        "          draw();\r\n",
+        "        }\r\n",
+        "      });\r\n",
+        "      draw();//初回表示\r\n",
+        "    });\r\n",
+        "    </script>\r\n",
+        "  </body>\r\n",
+        "</html>"
       ],
       "execution_count": null,
       "outputs": []
