--- a/arabictable.ipynb
+++ b/arabictable.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "arabictable.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOqP4CfM5xxfchgGyIfqTrr",
+      "authorship_tag": "ABX9TyMdbmjeBOqsjZh9GmqUP0A1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,12 +27,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gvDnC4VlEOyb"
+        "id": "gvDnC4VlEOyb",
+        "outputId": "0aa93bae-0e3b-48f8-dc26-ee7eadc66fa5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 250
+        }
       },
       "source": [
         "# 実験 アラビア語 1. temp.ipynb の王貞治\r\n",
         "# css.ipynb の w3schools\r\n",
-        "# headerはどうでもよい\r\n",
         "# アラビア語のフォントを大きくする。 フォントを自由に変える。\r\n",
         "# jsonを使う\r\n",
         "# 専用のサイトにするか => arabic table\r\n",
@@ -40,19 +44,6 @@
         "%%html\r\n",
         "\r\n",
         "<style>\r\n",
-        "    div#paging {\r\n",
-        "        text-align: center;\r\n",
-        "        /* スクロールに対してページングボックスの位置を固定 */\r\n",
-        "        position: fixed;\r\n",
-        "        /* 位置を指定 */\r\n",
-        "        bottom: 0;\r\n",
-        "        right: 45%;\r\n",
-        "    }\r\n",
-        "\r\n",
-        "    div#pagingbox {\r\n",
-        "        background: #FFF;\r\n",
-        "    }\r\n",
-        "\r\n",
         "    th {\r\n",
         "        /* ヘッダ背景塗りつぶし */\r\n",
         "        background: #eee;\r\n",
@@ -71,32 +62,44 @@
         "        border-collapse: collapse;\r\n",
         "        white-space: nowrap;\r\n",
         "    }\r\n",
+        "    \r\n",
+        "    table {border-collapse: collapse;border: 2px solid rgb(200, 200, 200);letter-spacing: 1px;font-size: 0.8rem;}td,th {border: 1px solid rgb(190, 190, 190);padding: 10px 20px;}th {background-color: rgb(235, 235, 235);}td {text-align: center;}tr:nth-child(even) td {background-color: rgb(250, 250, 250);}tr:nth-child(odd) td {background-color: rgb(245, 245, 245);}caption {padding: 10px;}\r\n",
         "</style>\r\n",
         "\r\n",
-        "<!--テーブル生成位置-->\r\n",
         "<div id='maintable'></div>\r\n",
         "\r\n",
         "<script>\r\n",
-        "    var json = [     //jsonサンプルデータ\r\n",
-        "        {\r\n",
-        "            \"順位\": 1, \"氏名\": \"王貞治\", \"本数\": 868\r\n",
-        "        }\r\n",
-        "        ,\r\n",
-        "        {\r\n",
-        "            \"順位\": 2, \"氏名\": \"野村克也\", \"本数\": 657\r\n",
-        "        }\r\n",
-        "        ,\r\n",
-        "        {\r\n",
-        "            \"順位\": 3, \"氏名\": \"門田博光\", \"本数\": 567\r\n",
-        "        }\r\n",
-        "        ,\r\n",
-        "        {\r\n",
-        "            \"順位\": 4, \"氏名\": \"山本浩二\", \"本数\": 536\r\n",
-        "        }\r\n",
-        "        ,\r\n",
-        "        {\r\n",
-        "            \"順位\": 5, \"氏名\": \"清原和博\", \"本数\": 525\r\n",
-        "        }\r\n",
+        "    var json = [\r\n",
+        "    {\r\n",
+        "        \"latin\": \"a-s-salaamu\",\r\n",
+        "        \"kana\": \"アッサラーム\",\r\n",
+        "        \"arabic\": \"اَلسَّلَامُ\",\r\n",
+        "        \"meaning\": \"peace\"\r\n",
+        "    },\r\n",
+        "    {\r\n",
+        "        \"latin\": \"2alaykum\",\r\n",
+        "        \"kana\": \"アライクム\",\r\n",
+        "        \"arabic\": \"عَلَيْكُمْ\",\r\n",
+        "        \"meaning\": \"on you\"\r\n",
+        "    },\r\n",
+        "    {\r\n",
+        "        \"latin\": \"SabaaH\",\r\n",
+        "        \"kana\": \"すぁバーふ\",\r\n",
+        "        \"arabic\": \"صَبَاح\",\r\n",
+        "        \"meaning\": \"morning\"\r\n",
+        "    },\r\n",
+        "    {\r\n",
+        "        \"latin\": \"marHaban\",\r\n",
+        "        \"kana\": \"マるはバン\",\r\n",
+        "        \"arabic\": \"مَرْحَبًا\",\r\n",
+        "        \"meaning\": \"Hello\"\r\n",
+        "    },\r\n",
+        "    {\r\n",
+        "        \"latin\": \"2anaa bikhayr\",\r\n",
+        "        \"kana\": \"アナー ビクハイる\",\r\n",
+        "        \"arabic\": \"أَنا بِخَيْر\",\r\n",
+        "        \"meaning\": \"I'm fine kl;lj ljk;lkj ljkl;kj lkjlkj lkj;lkj l;kj lklk lkj;kj lkj;lkj; ljl;kj lkj;lkj; l;kjl;;ljklkj lkj;ljkl;jk lkj;ljk\"\r\n",
+        "    }\r\n",
         "    ]\r\n",
         "\r\n",
         "    // table要素を生成\r\n",
@@ -136,8 +139,118 @@
         "    \r\n",
         "</script>"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "\n",
+              "<style>\n",
+              "    th {\n",
+              "        /* ヘッダ背景塗りつぶし */\n",
+              "        background: #eee;\n",
+              "    }\n",
+              "\n",
+              "    th,\n",
+              "    td {\n",
+              "        /* 枠線を1本線指定 */\n",
+              "        border: solid 1px;\n",
+              "        width: auto;\n",
+              "    }\n",
+              "\n",
+              "    table {\n",
+              "        /* 枠線を1本線指定 */\n",
+              "        border: solid 1px;\n",
+              "        border-collapse: collapse;\n",
+              "        white-space: nowrap;\n",
+              "    }\n",
+              "    \n",
+              "    table {border-collapse: collapse;border: 2px solid rgb(200, 200, 200);letter-spacing: 1px;font-size: 0.8rem;}td,th {border: 1px solid rgb(190, 190, 190);padding: 10px 20px;}th {background-color: rgb(235, 235, 235);}td {text-align: center;}tr:nth-child(even) td {background-color: rgb(250, 250, 250);}tr:nth-child(odd) td {background-color: rgb(245, 245, 245);}caption {padding: 10px;}\n",
+              "</style>\n",
+              "\n",
+              "<div id='maintable'></div>\n",
+              "\n",
+              "<script>\n",
+              "    var json = [\n",
+              "    {\n",
+              "        \"latin\": \"a-s-salaamu\",\n",
+              "        \"kana\": \"アッサラーム\",\n",
+              "        \"arabic\": \"اَلسَّلَامُ\",\n",
+              "        \"meaning\": \"peace\"\n",
+              "    },\n",
+              "    {\n",
+              "        \"latin\": \"2alaykum\",\n",
+              "        \"kana\": \"アライクム\",\n",
+              "        \"arabic\": \"عَلَيْكُمْ\",\n",
+              "        \"meaning\": \"on you\"\n",
+              "    },\n",
+              "    {\n",
+              "        \"latin\": \"SabaaH\",\n",
+              "        \"kana\": \"すぁバーふ\",\n",
+              "        \"arabic\": \"صَبَاح\",\n",
+              "        \"meaning\": \"morning\"\n",
+              "    },\n",
+              "    {\n",
+              "        \"latin\": \"marHaban\",\n",
+              "        \"kana\": \"マるはバン\",\n",
+              "        \"arabic\": \"مَرْحَبًا\",\n",
+              "        \"meaning\": \"Hello\"\n",
+              "    },\n",
+              "    {\n",
+              "        \"latin\": \"2anaa bikhayr\",\n",
+              "        \"kana\": \"アナー ビクハイる\",\n",
+              "        \"arabic\": \"أَنا بِخَيْر\",\n",
+              "        \"meaning\": \"I'm fine kl;lj ljk;lkj ljkl;kj lkjlkj lkj;lkj l;kj lklk lkj;kj lkj;lkj; ljl;kj lkj;lkj; l;kjl;;ljklkj lkj;ljkl;jk lkj;ljk\"\n",
+              "    }\n",
+              "    ]\n",
+              "\n",
+              "    // table要素を生成\n",
+              "    var table = document.createElement('table');\n",
+              "\n",
+              "    // ヘッダーを作成\n",
+              "    var tr = document.createElement('tr');\n",
+              "    for (key in json[0]) {\n",
+              "        // th要素を生成\n",
+              "        var th = document.createElement('th');\n",
+              "        // th要素内にテキストを追加\n",
+              "        th.textContent = key;\n",
+              "        // th要素をtr要素の子要素に追加\n",
+              "        tr.appendChild(th);\n",
+              "    }\n",
+              "    // tr要素をtable要素の子要素に追加\n",
+              "    table.appendChild(tr);\n",
+              "\n",
+              "    // テーブル本体を作成\n",
+              "    for (var i = 0; i < json.length; i++) {\n",
+              "        // tr要素を生成\n",
+              "        var tr = document.createElement('tr');\n",
+              "        // th・td部分のループ\n",
+              "        for (key in json[0]) {\n",
+              "            // td要素を生成\n",
+              "            var td = document.createElement('td');\n",
+              "            // td要素内にテキストを追加\n",
+              "            td.textContent = json[i][key];\n",
+              "            // td要素をtr要素の子要素に追加\n",
+              "            tr.appendChild(td);\n",
+              "        }\n",
+              "        // tr要素をtable要素の子要素に追加\n",
+              "        table.appendChild(tr);\n",
+              "    }\n",
+              "    // 生成したtable要素を追加する\n",
+              "    document.getElementById('maintable').appendChild(table);\n",
+              "    \n",
+              "</script>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     }
   ]
 }
